--- a/sWebExt/manifest.json
+++ b/sWebExt/manifest.json
@@ -25,6 +25,12 @@
     "page": "options.html",
     "open_in_tab": false
   },
+  "browser_specific_settings": {
+  "gecko": {
+    "id": "dein-projektname@deine-domain.com",
+    "strict_min_version": "109.0"
+   }
+  },
   "background": {  
     "service_worker": "background_service.js"  // Background service worker (replaces background pages in V3)  
   } 
